fixed countdown on mobile

--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -2,9 +2,11 @@
 .countdown {
     position: fixed;
     bottom: 0;
-    left: 0;
+    left: 50%;
+    padding-top: 55px;
     opacity: 0.85;
     transition: all 250ms ease;
+    transform: translateX(-50%);
     -webkit-transition: all 250ms ease;
     z-index: 5;
 }
@@ -38,12 +40,12 @@
 <section class="container-fluid countdown bg-black">
     <button id="timerToggle" class="close-timer btn btn-warning text-dark">&times;</button>
   <div class="row">
-    <div class="col mx-auto p-3 text-center">
+    <div class="col-12 mx-auto p-3 text-center">
       <p class="h3">2022 Alien Invasion starts in:</p>
     </div>
   </div>
   <div class="row">
-    <div class="col mx-auto p-3 text-center d-flex align-items-center justify-content-center">
+    <div class="col mx-auto p-3 text-center d-flex flex-column flex-sm-row align-items-center justify-content-center">
       <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 days">24</span><span>&nbsp;Days</span>
       <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 hours">25</span><span>&nbsp;Hours</span>
       <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 minutes">25</span><span>&nbsp;Minutes</span>
