--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -35,6 +35,16 @@
     background: transparent;
     color: #fff !important;
 }
+
+.days,
+.hours,
+.minutes,
+.seconds {
+    display: grid;
+    place-items: center;
+    width: 50px !important;
+    height: 50px !important;
+}
 </style>
 
 <section class="container-fluid countdown bg-black">
@@ -46,10 +56,10 @@
   </div>
   <div class="row">
     <div class="col mx-auto p-3 text-center d-flex flex-column flex-sm-row align-items-center justify-content-center">
-      <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 days">24</span><span>&nbsp;Days</span>
-      <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 hours">25</span><span>&nbsp;Hours</span>
-      <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 minutes">25</span><span>&nbsp;Minutes</span>
-      <span class="d-inline-block p-3 bg-dark text-white fw-bolder mx-1 fs-6 seconds">24</span><span>&nbsp;Seconds</span>
+      <span class="bg-dark text-white fw-bolder mx-1 fs-6 days">24</span><span>&nbsp;Days</span>
+      <span class="bg-dark text-white fw-bolder mx-1 fs-6 hours">25</span><span>&nbsp;Hours</span>
+      <span class="bg-dark text-white fw-bolder mx-1 fs-6 minutes">25</span><span>&nbsp;Minutes</span>
+      <span class="bg-dark text-white fw-bolder mx-1 fs-6 seconds">24</span><span>&nbsp;Seconds</span>
     </div>
   </div>
   <div class="row">
