--- a/themes/alienvibes/layouts/partials/closedForSeasons.html
+++ b/themes/alienvibes/layouts/partials/closedForSeasons.html
@@ -8,10 +8,13 @@
             transform: translate3D(-100%,0,0);
         }
     }
+    .marquee-container {
+        overflow-x: hidden;
+    }
 
     .marquee {
         animation: marquee 10s linear infinite;
-        overflow-y: hidden;
+        overflow-x: hidden;
     }
 
     time {
@@ -23,7 +26,7 @@
 <section class="container-fluid alert alert-dismissible alert-danger text-center">
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <div class="row">
-        <div class="col mx-auto text-center">
+        <div class="col col-xl-4 mx-auto text-center marquee-container">
             <p class="lead marquee"><strong>Our Opening Day Will Be <time class="text-dark px-2">Saturday, May 14, 2022</time></time></strong></p>
         </div>
     </div>
