adjusted marquee container again

--- a/themes/alienvibes/layouts/partials/closedForSeasons.html
+++ b/themes/alienvibes/layouts/partials/closedForSeasons.html
@@ -26,7 +26,7 @@
 <section class="container-fluid alert alert-dismissible alert-danger text-center">
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <div class="row">
-        <div class="col col-xl-4 mx-auto text-center marquee-container">
+        <div class="col col-xs-12 col-md-12 col-xl-6 mx-auto text-center marquee-container">
             <p class="lead marquee"><strong>Our Opening Day Will Be <time class="text-dark px-2">Saturday, May 14, 2022</time></time></strong></p>
         </div>
     </div>
