changed pricing, uploaded new invasion flyer, updated modals

--- a/themes/alienvibes/layouts/_default/pricing.html
+++ b/themes/alienvibes/layouts/_default/pricing.html
@@ -15,7 +15,7 @@
     </div>
 </header>
 <main class="single pricing container mx-auto p-3">
-    <section class="row justify-content-start">
+    <section class="row justify-content-start fw-bolder">
         {{ range .Params.pricing }}
         <div class="col-12 mx-auto text-start {{ with .animate}} animate-card {{ end }}">
             <div class="card border-info mb-3">
