--- a/themes/alienvibes/layouts/partials/closedForSeasons.html
+++ b/themes/alienvibes/layouts/partials/closedForSeasons.html
@@ -15,6 +15,10 @@
     .marquee {
         animation: marquee 10s linear infinite;
         overflow-x: hidden;
+        width: max-content;
+    }
+    .marquee:hover {
+        animation-play-state: paused;
     }
 
     time {
@@ -27,7 +31,7 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <div class="row">
         <div class="col col-xs-12 col-md-12 col-xl-6 mx-auto text-center marquee-container">
-            <p class="lead marquee"><strong>Our Opening Day Will Be <time class="text-dark px-2">Saturday, May 14, 2022</time></time></strong></p>
+            <p class="lead marquee p-2"><strong>Our Opening Day Will Be <time class="text-dark px-2">Saturday, May 14, 2022</time></strong></p>
         </div>
     </div>
 </section>
