--- a/themes/alienvibes/layouts/partials/closedForSeasons.html
+++ b/themes/alienvibes/layouts/partials/closedForSeasons.html
@@ -1,7 +1,7 @@
 <style>
     @keyframes marquee {
         from {
-        transform: translate3D(100%,0,0);
+        transform: translate3D(150%,0,0);
         }
 
         to {
@@ -15,6 +15,10 @@
     .marquee {
         animation: marquee 10s linear infinite;
         overflow-x: hidden;
+        width: max-content;
+    }
+    .marquee:hover {
+        animation-play-state: paused;
     }
 
     time {
@@ -26,8 +30,8 @@
 <section class="container-fluid alert alert-dismissible alert-danger text-center">
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <div class="row">
-        <div class="col col-xl-4 mx-auto text-center marquee-container">
-            <p class="lead marquee"><strong>Our Opening Day Will Be <time class="text-dark px-2">Saturday, May 14, 2022</time></time></strong></p>
+        <div class="col col-xs-12 col-md-12 col-xl-6 mx-auto text-center marquee-container">
+            <p class="lead marquee p-2"><strong>Our Opening Day Will Be <time class="text-dark px-2">Saturday, May 14, 2022</time></strong></p>
         </div>
     </div>
 </section>
