adjusted countdown timer, removed opening day, added hours

--- a/themes/alienvibes/layouts/partials/closedForSeasons.html
+++ b/themes/alienvibes/layouts/partials/closedForSeasons.html
@@ -27,7 +27,7 @@
     }
 
 </style>
-<section class="container-fluid alert alert-dismissible alert-danger text-center">
+<section class="d-none container-fluid alert alert-dismissible alert-danger text-center">
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <div class="row">
         <div class="col col-xs-12 col-md-12 col-xl-6 mx-auto text-center marquee-container">
