--- a/themes/alienvibes/layouts/_default/list.html
+++ b/themes/alienvibes/layouts/_default/list.html
@@ -7,9 +7,9 @@
             </div>
         </div>
     </div>
-    
+
     <div class="row px-0">
-        <div class="col-12 col-md-10 col-lg-8 mx-auto px-0">
+        <div class="col-12 col-md-10 col-lg-6 mx-auto px-0">
             <main class="main-content container-fluid mx-auto mb-5 px-2">
                 <div class="row">
                     <div class="col-12">
@@ -26,7 +26,7 @@
                                                 <div class="d-block d-md-inline-block">
                                                     <strong><i class="fa fa-address-card ps-1" aria-label="Author"></i></strong> <span class="ps-1">{{ .Params.author }}</span> 
                                                 </div>
-                                                <div class="d-block d-md-inline-block">
+                                                <div class="d-none">
                                                     <strong><i class="fa fa-calendar ps-1" aria-label="Date Published"></i></strong> <span class="ps-1">{{ time.Format "Monday, Jan 2, 2006" .Date }}</span>
 
                                                 </div>
@@ -81,6 +81,7 @@
             </main>
         </div>
     </div>
+
     
 </div>
 {{ end }}
