--- a/themes/alienvibes/layouts/_default/list.html
+++ b/themes/alienvibes/layouts/_default/list.html
@@ -32,7 +32,7 @@
                                                 </div>
                                                 {{ if .Params.start_date }}
                                                 <div class="d-block d-md-inline-block">
-                                                <strong><i class="fa fa-clock ps-1" aria-label="event date"></i></strong> <strong class="ps-1"><small>Start:</small></strong> <span class="ps-1">{{ time.Format "Monday, Jan 2, 2006" .Params.start_date }}</span>
+                                                <strong><i class="fa fa-clock ps-1" aria-label="event date"></i></strong> <strong class="ps-1"><small>Start:</small></strong> <span class="ps-1">{{ time.Format "Mon, Jan 02 2006 15:04:05" .Params.start_date }}</span>
                                                 </div>
                                                 {{ end }}
                                                 {{ if .Params.end_date }}
