--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -51,7 +51,7 @@
     <button id="timerToggle" class="close-timer btn btn-warning text-dark">&times;</button>
   <div class="row">
     <div class="col-12 mx-auto p-3 text-center">
-      <p class="h3">2022 Alien Invasion starts in:</p>
+      <p class="h3">Our Next Event Starts In:</p>
     </div>
   </div>
   <div class="row">
