added friday night events

--- a/themes/alienvibes/layouts/partials/closedForSeasons.html
+++ b/themes/alienvibes/layouts/partials/closedForSeasons.html
@@ -28,11 +28,11 @@
     }
 
 </style>
-<section class="container-fluid alert alert-dismissible alert-danger text-center">
+<section class="container-fluid alert alert-dismissible alert-info text-center">
     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
     <div class="row">
         <div class="col col-xs-12 col-md-12 col-xl-9 mx-auto text-center marquee-container">
-            <p class="lead marquee p-2"><strong>We Are Officially Closed For The Season.  See you in 2023! Thanks for the great season!</strong></p>
+            <p class="lead marquee p-2 text-uppercase"><strong>Our Opening Day Is May 13th, 2023!</strong></p>
         </div>
     </div>
 </section>
