fixed countdown timer

--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -51,7 +51,7 @@
     <button id="timerToggle" class="close-timer btn btn-warning text-dark">&times;</button>
   <div class="row">
     <div class="col-12 mx-auto p-3 text-center">
-      <p class="h3">Our Next Event Starts In:</p>
+      <p class="h3">Alien Invasion 2023 Starts In:</p>
     </div>
   </div>
   <div class="row">
@@ -64,7 +64,7 @@
   </div>
   <div class="row">
       <div class="col mx-auto p-3 text-center">
-          <a href="/events/" class="btn btn-danger" aria-label="event page link" title="Learn more about Area 51 Events">Learn More</a>
+          <a href="/events/" class="btn btn-danger" aria-label="event page link" title="Learn more about Area 51 Events">SEE OUR EVENTS</a>
       </div>
   </div>
 </section>
