--- a/themes/alienvibes/layouts/partials/aboutBlock.html
+++ b/themes/alienvibes/layouts/partials/aboutBlock.html
@@ -6,7 +6,7 @@
                 {{ with .Params.about_block }}
                 <p class="text-white p-3">{{ . | markdownify }}</p>
                 {{ end }}
-                <a href="tel:+12315776252" role="button" class="btn btn-danger btn-large rounded-pill text-uppercase fw-bold p-3 mx-3 fs-6 center-on-small">Call Us Now (231) 577-6252 </a>
+                <a href="tel:+12315776252" role="button" class="btn btn-danger btn-large rounded-pill text-uppercase fw-bold p-3 mx-3 fs-6 center-on-small interactive">Call Us Now (231) 577-6252 </a>
                 {{ with .Params.about_image}}
                 <img src="{{. | absURL }}" alt="paintsplatter" class="bg-img img-fluid" loading="lazy" height="500" width="1920">
                 {{ end }}
