--- a/themes/alienvibes/layouts/partials/navBar.html
+++ b/themes/alienvibes/layouts/partials/navBar.html
@@ -34,8 +34,8 @@
             {{- end -}}
             {{- end -}}
         </ul>
-        <a href="tel:+12315776252" role="button" class="btn btn-outline-warning btn-small fw-normal p-3 m-2 d-block d-lg-inline-block text-uppercase"><i class="fas fa-phone"></i> (231) 577-6252 </a>
-        <a href="https://www.google.com/maps/dir//Area+51+Paintball,+3005+Westwood+Rd+NE,+Mancelona,+MI+49659/@44.8526229,-85.1135778,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x881fe32c1c982593:0xf8bb784fd02c9001!2m2!1d-85.1113891!2d44.8526191!3e0" role="button" class="btn btn-outline-warning btn-small fw-normal p-3 m-2 d-block d-lg-inline-block text-uppercase"><i class="fas fa-map-marker"></i> Directions</a>
+        <a href="tel:+12315776252" role="button" class="btn btn-outline-warning btn-small fw-normal p-3 m-2 d-block d-lg-inline-block text-uppercase interactive"><i class="fas fa-phone"></i> (231) 577-6252 </a>
+        <a href="https://www.google.com/maps/dir//Area+51+Paintball,+3005+Westwood+Rd+NE,+Mancelona,+MI+49659/@44.8526229,-85.1135778,17z/data=!4m9!4m8!1m0!1m5!1m1!1s0x881fe32c1c982593:0xf8bb784fd02c9001!2m2!1d-85.1113891!2d44.8526191!3e0" role="button" class="btn btn-outline-warning btn-small fw-normal p-3 m-2 d-block d-lg-inline-block text-uppercase interactive"><i class="fas fa-map-marker"></i> Directions</a>
 
       </div>
     </div>
