--- a/themes/alienvibes/layouts/partials/heroHeader.html
+++ b/themes/alienvibes/layouts/partials/heroHeader.html
@@ -8,7 +8,7 @@
                 <h1 class="display-1 text-white hero-text p-3">{{ .Title }}</h1>
                 <h2 class="display-3 text-white hero-text p-3">{{ .Params.subtitle }}</h2>
                 <p class="lead text-white hero-text fw-normal p-3">{{ .Params.hero_text | safeHTML }}</p>
-                <a href="tel:+12315776252" role="button" class="btn btn-danger btn-large rounded-pill text-uppercase fw-bold p-3 fs-6">Call Us Now (231) 577-6252 </a>
+                <a href="tel:+12315776252" role="button" class="btn btn-danger btn-large rounded-pill text-uppercase fw-bold p-3 fs-6 interactive">Call Us Now (231) 577-6252 </a>
             </div>
         </div>
     </div>
