--- a/themes/alienvibes/static/css/main.css
+++ b/themes/alienvibes/static/css/main.css
@@ -39,7 +39,7 @@
   z-index: -1;
 }
 .hero .hero-content {
-  background: linear-gradient(0.25turn, rgba(38, 192, 128, 0.5), rgba(38, 192, 128, 0.5));
+  background: linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));
   display: grid;
   grid-area: 1/1;
   height: 100%;
@@ -66,7 +66,7 @@
   max-width: 100%;
 }
 .services .grid-wrapper {
-  background: linear-gradient(0.25turn, rgba(38, 192, 128, 0.5), rgba(38, 192, 128, 0.5));
+  background: linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));
   grid-area: 1/1;
   display: grid;
   place-items: center;
@@ -87,6 +87,17 @@
 }
 .services:hover .grid-wrapper .container-fluid .col-12 .card {
   opacity: 1;
+}
+
+.interactive {
+  -webkit-transition: all 250ms eas !important;
+  -moz-transition: all 250ms ease !important;
+  transition: all 250ms ease !important;
+}
+.interactive:hover {
+  -moz-transform: rotateZ(-3deg);
+  -webkit-transform: rotateZ(-3deg);
+  transform: rotateZ(-3deg);
 }
 
 .testimonials .container-fluid .row .col-12 .card {
