--- a/themes/alienvibes/layouts/partials/servicesBlock.html
+++ b/themes/alienvibes/layouts/partials/servicesBlock.html
@@ -47,10 +47,11 @@
                   
                     }
 
-                    uniformHeaderSize(headers)
 
 
-
+                    window.addEventListener("resize", () => {
+                        uniformHeaderSize(headers)
+                    })
                     
 
                    
