--- a/themes/alienvibes/layouts/partials/servicesBlock.html
+++ b/themes/alienvibes/layouts/partials/servicesBlock.html
@@ -42,7 +42,7 @@
                       }
                   
                       for (const i of headers) {
-                          i.style.height = newHeight + 'px'
+                          i.style.height = (newHeight + 5) + 'px'
                       }
                   
                     }
