--- a/themes/alienvibes/layouts/partials/servicesBlock.html
+++ b/themes/alienvibes/layouts/partials/servicesBlock.html
@@ -29,12 +29,13 @@
 
                 <script defer>
 
-                                       
+                    let newHeight = 0         
                     const headers = document.querySelectorAll(".update-header")
 
                     function uniformHeaderSize(headers){
+
+                        newHeight = 0
   
-                      let newHeight = 0
 
                       for (const h of headers) {
                           console.log(h)
