--- a/themes/alienvibes/layouts/partials/servicesBlock.html
+++ b/themes/alienvibes/layouts/partials/servicesBlock.html
@@ -51,6 +51,7 @@
 
 
                     window.addEventListener("resize", () => {
+                        newHeight = 0
                         uniformHeaderSize(headers)
                     })
                     
