--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -47,11 +47,11 @@
 }
 </style>
 
-<section class="container-fluid countdown bg-black d-none">
+<section class="container-fluid countdown bg-black">
     <button id="timerToggle" class="close-timer btn btn-warning text-dark">&times;</button>
   <div class="row">
     <div class="col-12 mx-auto p-3 text-center">
-      <p class="h3">Alien Invasion 2023 Starts In:</p>
+      <p class="h3">Alien Invasion 2024 Starts In:</p>
     </div>
   </div>
   <div class="row">
@@ -99,7 +99,7 @@ const countdownTimer = setInterval(() => {
 
         //const targetDate = new Date('October 21, 2022 18:00:00');
 
-    const targetDate = new Date('July 21, 2023 16:00:00');
+    const targetDate = new Date('July 19, 2024 16:00:00');
 
 
         //  Grab The Current Date
