--- a/themes/alienvibes/layouts/_default/gallery.html
+++ b/themes/alienvibes/layouts/_default/gallery.html
@@ -31,8 +31,7 @@
     </div>
     <div class="container text-center">
         <div class="row text-center">
-            {{ with .Resources.ByType "image" }} {{ range . }} {{ $original := .
-            }} {{ $thumbnail := $original.Fill "300x300" }}
+            {{ with .Resources.ByType "image" }} {{ range . }} {{ $original := .}} {{ $thumbnail := $original.Fill "300x300" }}
             <div class="col-12 col-md-6 col-lg-3 mx-auto text-center">
                 <img
                     data-full="{{ $original.RelPermalink | absURL }}"
