tryna fix formatting

--- a/themes/alienvibes/layouts/partials/footer.html
+++ b/themes/alienvibes/layouts/partials/footer.html
@@ -57,8 +57,7 @@
             <div class="col-12 col-md-3 mx-auto p-2">
                 <h4 class="text-warning text-decoration-underline">Hours</h4>
                 <ul class="list-group border-0 ps-0">
-                    {{ with .GetPage "footerBlock"}} {{ if
-                    .Site.Params.closed_for_season }}
+                    {{ with .GetPage "footerBlock"}} {{ if .Site.Params.closed_for_season }}
 
                     <p>We Are Closed For The Season</p>
 
