--- a/themes/alienvibes/layouts/partials/footer.html
+++ b/themes/alienvibes/layouts/partials/footer.html
@@ -76,9 +76,7 @@
                 </h4>
                 <address>
                     <ul class="list-group border-0 ps-0">
-                        {{ with .GetPage "footerBlock" }} {{ range
-                        .Params.address }}
-
+                        {{ with .GetPage "footerBlock" }} {{ range .Params.address }}
                         <li
                             class="list-group-item ps-0 border-0 bg-transparent"
                         >
