--- a/themes/alienvibes/layouts/partials/footer.html
+++ b/themes/alienvibes/layouts/partials/footer.html
@@ -1,119 +1,117 @@
 <footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-9 mx-auto">
-                <h3 class="text-center p-2 border-warning border-bottom">
-                    Area 51 Paintball
-                </h3>
-                <p class="text-center p-2 lead">
-                    We are one of the most respected paintball fields in the
-                    Midwest. We have been serving the area for over 20 years and
-                    have a huge following. Our paintball fields are one of the
-                    most challenging in the area and our paintball players are
-                    some of the most loyal and friendly.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 text-center my-2">
-                <img
-                    data-src="{{ .Site.Params.logo | absURL}}"
-                    alt="logo"
-                    class="lazy fluid-img"
-                    width="325"
-                    height="200"
-                />
-            </div>
-        </div>
-        <div class="row px-5">
-            <div class="col-12 col-md-3 mx-auto p-2">
-                <h4 class="text-warning text-decoration-underline">
-                    Our Promise
-                </h4>
-                <p>
-                    Area 51 Paintball is Northern Michigan's premier outdoor
-                    paintball field, offering great paintballing to both first
-                    time players and veterans, and is proud to have players of
-                    all ages and skill levels. Area 51 Paintball is designed to
-                    be a fun and inclusive environment for all ages and skill
-                    levels. We offer a variety of game types for both first time
-                    and experienced players, with a rotating schedule of events
-                    that keep things fresh and exciting. Whether you're a
-                    veteran of the game or a first timer, we will make your
-                    experience with us unforgettable!
-                </p>
-            </div>
-            <div class="col-12 col-md-3 mx-auto p-2">
-                <h4 class="text-warning text-decoration-underline">Explore</h4>
-                {{ range .Site.Menus.main }}
-                <a
-                    href="{{ .URL | absURL}}"
-                    title="{{ .Name }}"
-                    class="d-block py-2 fw-bolder mx-auto footer-link"
-                    ><i class="fas fa-chevron-right me-1"></i>{{ .Name }}</a
-                >
-                {{ end }}
-            </div>
-            <div class="col-12 col-md-3 mx-auto p-2">
-                <h4 class="text-warning text-decoration-underline">Hours</h4>
-                <ul class="list-group border-0 ps-0">
-                    {{ with .GetPage "footerBlock"}} {{ if .Site.Params.closed_for_season }}
-
-                    <p>We Are Closed For The Season</p>
-
-                    {{ else }} {{ range .Params.hours}}
-                    <li class="list-group-item bg-transparent border-0 ps-0">
-                        <span id="day-{{ .id }}" class="day"
-                            >{{ .day | markdownify }}: {{ .start | markdownify }} - {{ .finish | markdownify }}</span
-                        >
-                    </li>
-                    {{ end }} {{ end }} {{ end }}
-                </ul>
-            </div>
-            <div class="col-12 col-md-3 mx-auto p-2">
-                <h4 class="text-warning text-decoration-underline">
-                    Contact Information
-                </h4>
-                <address>
-                    <ul class="list-group border-0 ps-0">
-                        {{ with .GetPage "footerBlock" }} {{ range .Params.address }}
-                        <li class="list-group-item ps-0 border-0 bg-transparent">
-                            {{ . | markdownify }}
-                        </li>
-                        {{ end }} {{ end }}
-                    </ul>
-                </address>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-9 mx-auto">
+        <h3 class="text-center p-2 border-warning border-bottom">
+          Area 51 Paintball
+        </h3>
+        <p class="text-center p-2 lead">
+          We are one of the most respected paintball fields in the Midwest. We
+          have been serving the area for over 20 years and have a huge
+          following. Our paintball fields are one of the most challenging in the
+          area and our paintball players are some of the most loyal and
+          friendly.
+        </p>
+      </div>
     </div>
+    <div class="row">
+      <div class="col-12 text-center my-2">
+        <img
+          data-src="{{ .Site.Params.logo | absURL}}"
+          alt="logo"
+          class="lazy fluid-img"
+          width="325"
+          height="200"
+        />
+      </div>
+    </div>
+    <div class="row px-5">
+      <div class="col-12 col-md-3 mx-auto p-2">
+        <h4 class="text-warning text-decoration-underline">Our Promise</h4>
+        <p>
+          Area 51 Paintball is Northern Michigan's premier outdoor paintball
+          field, offering great paintballing to both first time players and
+          veterans, and is proud to have players of all ages and skill levels.
+          Area 51 Paintball is designed to be a fun and inclusive environment
+          for all ages and skill levels. We offer a variety of game types for
+          both first time and experienced players, with a rotating schedule of
+          events that keep things fresh and exciting. Whether you're a veteran
+          of the game or a first timer, we will make your experience with us
+          unforgettable!
+        </p>
+      </div>
+      <div class="col-12 col-md-3 mx-auto p-2">
+        <h4 class="text-warning text-decoration-underline">Explore</h4>
+        {{ range .Site.Menus.main }}
+        <a
+          href="{{ .URL | absURL}}"
+          title="{{ .Name }}"
+          class="d-block py-2 fw-bolder mx-auto footer-link"
+          ><i class="fas fa-chevron-right me-1"></i>{{ .Name }}</a
+        >
+        {{ end }}
+      </div>
+      <div class="col-12 col-md-3 mx-auto p-2">
+        <h4 class="text-warning text-decoration-underline">Hours</h4>
+        <ul class="list-group border-0 ps-0">
+          {{ with .GetPage "footerBlock"}} {{ if .Params.closed_for_season }}
+
+          <p>We Are Closed For The Season</p>
+
+          {{ else }} {{ range .Params.hours}}
+          <li class="list-group-item bg-transparent border-0 ps-0">
+            <span id="day-{{ .id }}" class="day"
+              >{{ .day | markdownify }}: {{ .start | markdownify }} - {{ .finish
+              | markdownify }}</span
+            >
+          </li>
+          {{ end }} {{ end }} {{ end }}
+        </ul>
+      </div>
+      <div class="col-12 col-md-3 mx-auto p-2">
+        <h4 class="text-warning text-decoration-underline">
+          Contact Information
+        </h4>
+        <address>
+          <ul class="list-group border-0 ps-0">
+            {{ with .GetPage "footerBlock" }} {{ range .Params.address }}
+            <li class="list-group-item ps-0 border-0 bg-transparent">
+              {{ . | markdownify }}
+            </li>
+            {{ end }} {{ end }}
+          </ul>
+        </address>
+      </div>
+    </div>
+  </div>
 </footer>
 <div class="container-fluid bg-black">
-    <div class="row">
-        <div class="col md-12">
-            <p class="text-center p-3">
-                &copy; <span id="year">{{time.Now.Format "2006"}}</span> Site
-                Designed & Developed By
-                <a
-                    href="https://www.andrew-mccall.com/services/web-development-traverse-city"
-                    title="Traverse City Web Design"
-                    >Andrew M McCall</a
-                ><span class="wave ps-2">👋</span>
-            </p>
-        </div>
+  <div class="row">
+    <div class="col md-12">
+      <p class="text-center p-3">
+        &copy; <span id="year">{{time.Now.Format "2006"}}</span> Site Designed &
+        Developed By
+        <a
+          href="https://www.andrew-mccall.com/services/web-development-traverse-city"
+          title="Traverse City Web Design"
+          >Andrew M McCall</a
+        ><span class="wave ps-2">👋</span>
+      </p>
     </div>
+  </div>
 </div>
 <div class="elevator" onclick="backToTop()">
-    <a href="#top" class="d-block" title="return to the top">
-        <i class="fas fa-arrow-circle-up fa-2x text-success"></i>
-    </a>
+  <a href="#top" class="d-block" title="return to the top">
+    <i class="fas fa-arrow-circle-up fa-2x text-success"></i>
+  </a>
 </div>
 
 <script defer>
-    function backToTop() {
-        document.body.scrollTo({
-            top: 0,
-            left: 0,
-            behavior: "smooth",
-        });
-    }
+  function backToTop() {
+    document.body.scrollTo({
+      top: 0,
+      left: 0,
+      behavior: "smooth",
+    });
+  }
 </script>
