--- a/themes/alienvibes/layouts/partials/footer.html
+++ b/themes/alienvibes/layouts/partials/footer.html
@@ -61,11 +61,11 @@
           {{ else }} {{ range .Params.hours}}
           <li class="list-group-item bg-transparent border-0 ps-0">
             <span id="day-{{ .id }}" class="day"
-              >{{ .day | markdownify }}: {{ .start | markdownify }} - {{ .finish
-              | markdownify }}</span
-            >
+              >{{ .day | markdownify }}: {{ .start | markdownify }} - {{ .finish | markdownify }}</span>
           </li>
-          {{ end }} {{ end }} {{ end }}
+          {{ end }} 
+          {{ end }} 
+          {{ end }}
         </ul>
       </div>
       <div class="col-12 col-md-3 mx-auto p-2">
