--- a/themes/alienvibes/layouts/partials/head.html
+++ b/themes/alienvibes/layouts/partials/head.html
@@ -19,7 +19,7 @@
   <!-- Preload, Prefetch, preconnect etc. -->
 
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
-  <link rel="preconnect" href="https://plausible.io" />
+  <link rel="preconnect" href="https://stats.protoweb.io" />
 
   <!-- Vendors -->
   <link
