wrong tracking code

--- a/themes/alienvibes/layouts/partials/head.html
+++ b/themes/alienvibes/layouts/partials/head.html
@@ -39,10 +39,6 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{- .Site.BaseURL -}}css/main.css" />
   {{ if eq hugo.Environment "production" }}
-  <script
-    defer
-    src="https://stats.protoweb.io/script.js"
-    data-website-id="3c1db2ec-9965-4637-b58b-585d0b1a64af"
-  ></script>
+  <script defer src="https://stats.protoweb.io/script.js" data-website-id="f4c1ba37-9fa5-4ee2-bff4-f1ba7fa4ea1a"></script>
   {{ end }}
 </head>
