checking for empty event array

--- a/themes/alienvibes/layouts/partials/countdown-timer.html
+++ b/themes/alienvibes/layouts/partials/countdown-timer.html
@@ -82,6 +82,8 @@
         return new Date(el.date) >= new Date(Date.now())
     })
 
+    if (!sortedByDate.length) return
+
 
     const days = document.querySelector(".days");
     const hours = document.querySelector(".hours");
